feat: get tasks by difficulty